conf/k8s/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, OPTIONS"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #  rewrite_log on;
    #  location ~ /front-end/.* {
    #    rewrite ^/front-end(/.*)?$ https://$host/$1 break;
    #  }
    # nginx.ingress.kubernetes.io/cors-allow-origin: "https://${PLAYGROUND_HOST}"
spec:
  tls:
  - hosts:
    - __TO_REPLACE__
    secretName: playground-tls
  rules:
  - host: __TO_REPLACE__
    http:
      paths:
      - path: /
        backend:
          serviceName: server-service
          servicePort: 80
      - path: /api
        backend:
          serviceName: ui-service
          servicePort: 80
